# xiaofang

./: Cargo.toml  LICENSE  README.md  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust_ci.yml
cube/: Cargo.toml
cube/src/: bagua.rs  battery.rs  buzzer.rs  cube_man.rs  dice.rs  dodge_cube.rs  face.rs  ledc.rs  lib.rs  main.rs  map.rs  mapping.rs  maze.rs  player.rs  snake.rs  sokoban.rs  timer.rs  timers.rs  ui.rs  wifi_ap.rs
cube_rand/: Cargo.toml
cube_rand/src/: lib.rs
docs/: README.md
hardware/: README.md
hardware/pcbs/: BOM.csv
irrgarten/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
irrgarten/src/: lib.rs
maze/: Cargo.toml
maze/src/: lib.rs
rfcs/: 000_template.md  001_bagua.md  002_dice.md  003_snake.md  004_timer.md  005_maze.md  006_cube_man.md  007_sokoban.md  008_dodge_cube.md  009_music_spectrum.md  010_play_ball.md
scripts/: build.sh  flash.sh
smart-leds-matrix/: Cargo.toml  README.md
smart-leds-matrix/src/: layout.rs  lib.rs
src/: bagua.rs  dice.rs  face.rs  ledc.rs  lib.rs  main.rs  mapping.rs  maze.rs  snake.rs  timer.rs  ui.rs  ws2812.rs
ws2812-spi-rs/: Cargo.toml
ws2812-spi-rs/src/: lib.rs  prerendered.rs
