[package]
name = "xiaofang"
version = "0.1.0"
authors = ["LittleGuest <2190975784@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
# esp-idf-hal = { version = "0.42.5", default-features = false }
max7219 = "0.4.0"
anyhow = "1.0.75"
rand = { version = "0.8.5" }
mpu6050-dmp = "0.3.0"
embedded-hal = "0.2.7"
# embedded-svc = "0.26.4"
# esp-idf-sys = "0.33.7"

[build-dependencies]
embuild = "0.31.3"
