[package]
name = "cube"
version = "0.1.0"
authors = ["LittleGuest <2190975784@qq.com>"]
edition = "2021"
license = "MIT"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.13.0" }
esp-backtrace = { version = "0.9.0", features = [
  "esp32c3",
  "panic-handler",
  "exception-handler",
  "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32c3", "log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
esp-wifi = { version = "0.1.1", features = ["esp32c3", "wifi"] }
smoltcp = { version = "0.10.0", default-features = false, features = [
  "proto-igmp",
  "proto-ipv4",
  "socket-tcp",
  "socket-icmp",
  "socket-udp",
  "medium-ethernet",
  "proto-dhcpv4",
  "socket-raw",
  "socket-dhcpv4",
] }
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }
# smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
mpu6050-dmp = "0.3.0"
# max7219 = "0.4.0"
embedded-hal = "0.2.7"
fastrand = { version = "2.0.1", default-features = false }
# smart-leds-matrix = { git = "https://github.com/smart-leds-rs/smart-leds-matrix.git" }
smart-leds-matrix = { path = "../smart-leds-matrix/" }
irrgarten = { path = "../irrgarten/" }
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
tinyrand = "0.5.0"
