[package]
name = "cube"
version = "0.1.0"
authors = ["LittleGuest <2190975784@qq.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-backtrace = { version = "0.11.1", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.17.0", features = [
  "esp32c3",
  "async",
  "embassy",
  "embassy-executor-thread",
  "embassy-executor-interrupt",
  "embassy-integrated-timers",
  "embassy-time-timg0",
] }
esp-println = { version = "0.9.1", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.3.0" }
embedded-svc = { version = "0.27.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.5.1", features = [
  "esp32c3",
  "phy-enable-usb",
  "utils",
  "wifi",
  "async",
  "embassy-net",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
  "medium-ethernet",
  "proto-dhcpv4",
  "proto-igmp",
  "proto-ipv4",
  "socket-dhcpv4",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
embassy-executor = { version = "0.5.0", features = [
  # "task-arena-size-40960",
  # "nightly",
  # "arch-riscv32",
  # "integrated-timers",
  # "executor-thread",
] }
embassy-time = "0.3.0"
embassy-sync = "0.5.0"
embassy-net = { version = "0.4.0", features = ["dhcpv4", "tcp", "udp", "dns"] }
mpu6050-dmp = "0.4.0"
static_cell = { version = "2.1.0" }
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
# lazy_static = { version = "1.4.0", default-features = false, features = [
#   "spin_no_std",
# ] }
ws2812-spi = { path = "../ws2812-spi-rs/" }
# smart-leds-matrix = { path = "../smart-leds-matrix/" }
cube_rand = { path = "../cube_rand/" }
maze = { path = "../maze" }
esp-storage = { version = "0.3.0", features = ["esp32c3"] }
embedded-storage = "0.3.1"
smart-leds-matrix = "0.2.0"
smart-leds = "0.4.0"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
